<resources>
    <string name="app_name">Feather</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="btnSend">Send</string>
    <string name="editPassword">Password</string>
    <string name="editUsername">Username</string>
    <string name="editEmailRegister">Email</string>
    <string name="editAgeRegister">Age</string>
    <string name="editTextOptional">Optional</string>
    <string name="editWriteAMessage">Write a message</string>
    <string name="editTitle">Title</string>
    <string name="editUsuarios">Users</string>
    <string name="btnAddChannel">Add Channel</string>
    <string name="editAddContact">Add Contact</string>
    <string name="btnAddContact">Add Contact</string>
    <string name="channel_description">New Messages</string>
    <string name="channelID">App Notifications</string>
    <string name="Slipt">Slipt users by , </string>
    <string name="title_activity_maps">Map</string>
</resources>
